--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css" />
 
 </head>
@@ -92,7 +91,7 @@
     </div>
 
     <div class="container text-center">
-        <div class="tvchannellogo">
+        <div id="tvchannel">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <a href="programpage.html">
@@ -251,33 +250,7 @@
         <a href="aboutus.html"> Om oss </a><br />
         <a href="contact.html"> Kontakta oss </a> </footer>
 
-
-    <script>
-        debugger;
-        function myFunction() {
-
-            var test = document.forms["topnavsearch"]["search"].value;
-            var testLowCase = test.toLowerCase();
-            // document.write(test);// printar det man skriver i sökrutan
-            var ul = document.getElementById("programlist");
-            var items = ul.getElementsByTagName("li");
-
-            //Printar alla li i en ul.
-            for (var i = 0; i < items.length; i++) {
-
-                var x = items[i].innerText;
-                var xLowCAse = x.toLowerCase();
-
-                if (xLowCAse.includes(testLowCase)) {
-
-                    document.write(x);
-
-                }
-
-            };
-        }
-
-    </script>
+    <script src="script.js"></script>
 
 </body>
 
