tagit bort id på knappen

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li>
                             <form id="topnavsearch"><input type="text" name="search" placeholder="Sök...">
                                 <!-- knappen funkar -->
-                                <button onclick="myFunction();" id="btnID" type="button">Sök</button>
+                                <button onclick="myFunction();" type="button">Sök</button>
                             </form>
                         </li>
                     </ul>
@@ -52,6 +52,9 @@
                     </ul>
                 </div>
             </nav>
+        </div>
+        <div class="col-xs-12">
+        <p id="programinfo"><ul id="prog-info-ul"></ul></p>
         </div>
     </div>
 
