--- a/index.html
+++ b/index.html
@@ -308,7 +308,14 @@
         var testLowCase = test.toLowerCase();
 
         var list = document.getElementById("tvchannel");
-        var items = list.getElementsByTagName("li"); 
+        var items = list.getElementsByTagName("li");
+
+        var arr = new Array;
+
+        for (var i = 0; i < items.length; i++) {
+            var x = items[i].innerText;
+            arr.push(x);
+        }
         // var availableTags = ["06.15 Under klubban",
         //     "06.45 Sverige!",
         //     "07.15 Timjan, tupp & tårta ",
@@ -316,8 +323,6 @@
         // ];
         // var availableTags = myFunction();
 
-        var arr = new Array;
-        arr.push(x);
 
         $(function () {
             $("#inputautocomplete").autocomplete({ source: arr });
